k8s/networking/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-tracker-ingress
spec:
  ingressClassName: nginx
  rules:
    # url of ELB from eks (that's the one that made when you install ingress controller on the cluster)
    - host: aa6dc7d05d55c434ab28af9530b1986c-26865c58cdfb7ca2.elb.us-east-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix #and anything after the /
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix 
            backend:
              service:
                name: backend-service
                port:
                  number: 80
